Fix use of 'pygments' highlighter not supported

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ tagline:             'Styx is what Serendipity should be'
 description:         ''
 url:                 https://ophian.github.io
 paginate:            5
-highlighter:         pygments
+highlighter:         rouge
 
 # About/contact
 author:
