--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ tagline:             'Styx is what Serendipity should be'
 description:         ''
 url:                 https://ophian.github.io
 paginate:            5
+paginate_path:       "/blog/page:num/"
 highlighter:         rouge
 
 # About/contact
